# sql-practice

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
SQL/: Untitled.ipynb  a.pgsql  chap10_practice.ipynb  chap11_practice.ipynb  chap1_practice.ipynb  chap2_practice.ipynb  chap3_practice.ipynb  chap4_practice.ipynb  chap5_practice.ipynb  chap6_practice.ipynb  chap7_practice.ipynb  chap8_practice.ipynb  chap9_practice.ipynb
