[tool.poetry]
name = "sql"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pandas = "^1.2.2"
ipython = "^7.20.0"
jupyter = "^1.0.0"
jupyterlab = "^3.0.7"
matplotlib = "^3.3.4"
psycopg2 = "^2.8.6"
tqdm = "^4.56.2"
seaborn = "^0.11.1"
SQLAlchemy = "^1.3.23"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
